openturns/1.16/_sources/auto_data_analysis/manage_data_and_samples/plot_estimate_moments.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py:


Estimate moments from sample
============================

In this example we are going to estimate statistical moments from a sample, eventually from an output variable of interest.


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    ot.Log.Show(ot.Log.NONE)








Create a sample 


.. code-block:: default


    # model f
    model = ot.SymbolicFunction(["x1", "x2"], ["x1^2+x2", "x2^2+x1"])

    # input vector X
    inputDist = ot.ComposedDistribution([ot.Normal()] * 2, ot.IndependentCopula(2))
    inputDist.setDescription(['X1', 'X2'])
    inputVector = ot.RandomVector(inputDist)

    # output vector Y=f(X)
    output = ot.CompositeRandomVector(model, inputVector)

    # sample Y
    size = 1000
    sample = output.getSample(size)








Estimate mean


.. code-block:: default

    sample.computeMean()






.. raw:: html

    <p>[0.923615,1.02297]</p>
    <br />
    <br />

Estimate standard deviation


.. code-block:: default

    sample.computeStandardDeviation()






.. raw:: html

    <p>[[ 1.65759   0         ]<br>
     [ 0.0710817 1.81269   ]]</p>
    <br />
    <br />

Estimate variance


.. code-block:: default

    sample.computeVariance()






.. raw:: html

    <p>[2.74761,3.2909]</p>
    <br />
    <br />

Estimate skewness


.. code-block:: default

    sample.computeSkewness()






.. raw:: html

    <p>[1.44617,1.73649]</p>
    <br />
    <br />

Estimate kurtosis


.. code-block:: default

    sample.computeKurtosis()





.. raw:: html

    <p>[7.00125,8.00153]</p>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.004 seconds)


.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_estimate_moments.py <plot_estimate_moments.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_estimate_moments.ipynb <plot_estimate_moments.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
