openturns/1.17/_sources/auto_data_analysis/manage_data_and_samples/plot_estimate_moments.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_data_analysis/manage_data_and_samples/plot_estimate_moments.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py:


Estimate moments from sample
============================

.. GENERATED FROM PYTHON SOURCE LINES 6-7

In this example we are going to estimate statistical moments from a sample, eventually from an output variable of interest.

.. GENERATED FROM PYTHON SOURCE LINES 9-13

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 14-15

Create a sample 

.. GENERATED FROM PYTHON SOURCE LINES 15-31

.. code-block:: default


    # model f
    model = ot.SymbolicFunction(["x1", "x2"], ["x1^2+x2", "x2^2+x1"])

    # input vector X
    inputDist = ot.ComposedDistribution([ot.Normal()] * 2, ot.IndependentCopula(2))
    inputDist.setDescription(['X1', 'X2'])
    inputVector = ot.RandomVector(inputDist)

    # output vector Y=f(X)
    output = ot.CompositeRandomVector(model, inputVector)

    # sample Y
    size = 1000
    sample = output.getSample(size)








.. GENERATED FROM PYTHON SOURCE LINES 32-33

Estimate mean

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: default

    sample.computeMean()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[0.922865,1.02244]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 36-37

Estimate standard deviation

.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: default

    sample.computeStandardDeviation()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[1.65359,1.8197]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 40-41

Estimate variance

.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: default

    sample.computeVariance()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[2.73435,3.31132]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 44-45

Estimate skewness

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: default

    sample.computeSkewness()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[1.44932,1.72739]</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 48-49

Estimate kurtosis

.. GENERATED FROM PYTHON SOURCE LINES 49-50

.. code-block:: default

    sample.computeKurtosis()





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <p>[7.05724,7.92245]</p>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.002 seconds)


.. _sphx_glr_download_auto_data_analysis_manage_data_and_samples_plot_estimate_moments.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_estimate_moments.py <plot_estimate_moments.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_estimate_moments.ipynb <plot_estimate_moments.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
